# readability-python

./: .clinerules  .coveragerc  .gitignore  CONTRIBUTING.md  MANIFEST.in  PACKAGING.md  README.md  benchmark.py  caching-improvements.md  compare_performance.py  comparison-function-analysis.md  coverage.xml  create_uncached_version.py  debug-tools-analysis.md  enhance_comparison_functions.py  extracted.html  memory_test.py  project-plan.md  pyproject.toml  pytest.ini  setup.py  sonar-project.properties  test-case-categorization.md  test-case-comparison.md  test-case-migration-script.py  test-function-analysis.md  test-improvement-plan.md  test-infrastructure-assessment.md  test-verification-plan.md  testing-README.md  verify_test_cases.py
cli/: errors.py  main.py
coverage-reports/: coverage.xml
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
readability/: __init__.py  models.py  parser.py  parser_backup.py  regexps.py  utils.py
scripts/: coverage.py  fix_coverage.py  prepare_sonar.py  publish.py  run_tests.py  sonar_coverage.py  sonar_test_results.py
test-reports/: test-results.xml
tests/: __init__.py  conftest.py  debug_tools.py  helpers.py  test_categories.py  test_cli.py  test_content_cleaning.py  test_content_identification.py  test_errors.py  test_html_parsing.py  test_memory_management.py  test_metadata_extraction.py  test_readability.py  test_real_world.py  test_regexps.py  test_text_normalization.py  test_url_handling.py  test_utils.py  test_visibility_detection.py
(+156 files in other folders)
