[tool.poetry]
name = "python-readability"
version = "0.1.0"
description = "Python port of the go-readability library for extracting the main content from web pages"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/your-username/python-readability"
packages = [{include = "readability"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
python-dateutil = "^2.8.2"
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
ruff = "^0.0.262"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
python-readability = "cli.main:main"

# Black configuration
[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "I"]
ignore = []
